--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.109.0
 uvicorn[standard]==0.27.0
 sqlalchemy==2.0.25
 alembic==1.13.1
-asyncpg==0.29.0
+psycopg[binary]
 pandas==2.2.0
 lightgbm==4.3.0
 scikit-learn==1.4.0
@@ -15,3 +15,4 @@ pydantic==2.6.0
 pydantic-settings==2.1.0
 pytest==8.0.0
 pytest-asyncio==0.23.5
+requests==2.31.0
